--- a/restaurant/src/main/resources/application.yml
+++ b/restaurant/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: password
-    url: jdbc:mysql://127.0.0.1:3306/restaurant_test?useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://127.0.0.1:3306/restaurant?useUnicode=true&characterEncoding=utf-8
     hikari:
       read-only: false
       connection-timeout: 30000
