--- a/restaurant/src/main/resources/application.yml
+++ b/restaurant/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
-    password: 123
+    password: 17734614
     url: jdbc:mysql://127.0.0.1:3306/restaurant?useUnicode=true&characterEncoding=utf-8
     hikari:
       read-only: false
