--- a/restaurant/src/main/resources/application.yml
+++ b/restaurant/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
-    password: 123
+    password: 17734614
     url: jdbc:mysql://127.0.0.1:3306/restaurant?useUnicode=true&characterEncoding=utf-8
     hikari:
       read-only: false
@@ -64,4 +64,4 @@ server:
     context-path: /restaurant
 
 web:
-  upload-image-path: E:\Programming\Java\Project\restaurant-master\images\restaurant\upload
+  upload-image-path: E:\Programming\Java\Project\restaurant_pos_ultimate\images\restaurant\upload
